--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "petmatch_api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -6,6 +17,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
+    "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
